# pptx-converter

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.lambda  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  api.py  config.py  converter.py  jobs.py  main.py  models.py  pipeline.py  s3.py  splitter.py
